# automated-driving-MPC

./: README.md
Astar+output/: CMakeLists.txt  main.cpp  map.txt  path.txt
carsim2mpc/: MPC_Matrices.m  Prediction.m  carsim.slx  getAB.m  map.txt  path_design.m  predict.m  showxy.m
carsim2mpc_v1.1/: .MATLABDriveTag  MPC_martrix.m  MPC_optimize.m  carsim.slx  carsim.slx.original  carsim.slxc  getAB.m  mpctest.m  path_design.m  predict.m  showxy.m
carsim2mpc_v1.1/slprj/_jitprj/: jitEngineAccessInfo.mat  sAsKhhSF5XBlsbPUR7gAvVF.l  sAsKhhSF5XBlsbPUR7gAvVF.mat  sDLgYSJm6uhptwVw2S3oH1.l  sDLgYSJm6uhptwVw2S3oH1.mat  sG0uzeSy3sCVashXiXFBU8D.l  sG0uzeSy3sCVashXiXFBU8D.mat  sLhLJKcjt6ra8nWtzZPUpXB.l  sLhLJKcjt6ra8nWtzZPUpXB.mat  sPLKtsFP2I345KICiihrFJ.l  sPLKtsFP2I345KICiihrFJ.mat  sRRvpgGVszrEB8dxGasRfM.l  sRRvpgGVszrEB8dxGasRfM.mat  sTQeYeZraRIX88vGDjx6SlG.l  sTQeYeZraRIX88vGDjx6SlG.mat  sWfZs1dvVVyPBa47T47zZiH.l  sWfZs1dvVVyPBa47T47zZiH.mat  sZWAErLsnlG08JMgHjQXM8C.l  sZWAErLsnlG08JMgHjQXM8C.mat  scedFcrjuplPii7piS2RwgB.l  scedFcrjuplPii7piS2RwgB.mat  shdp6kOP2gzuXaK4WzE4gEH.l  shdp6kOP2gzuXaK4WzE4gEH.mat  shlI5KgW4W84z8mIBAaq5NG.l  shlI5KgW4W84z8mIBAaq5NG.mat  sjTQuol0mvOg2Xwh26yGLNC.l  sjTQuol0mvOg2Xwh26yGLNC.mat  sjc6e413PGVW4quI9qWal3F.l  sjc6e413PGVW4quI9qWal3F.mat  sv3LBXNf5IptPYiaYrHSt9.l  sv3LBXNf5IptPYiaYrHSt9.mat  swM0OyfSko6G0H9nwQg2paD.l  swM0OyfSko6G0H9nwQg2paD.mat  szGFFrF9XV1lmM9GmMiG0xD.l  szGFFrF9XV1lmM9GmMiG0xD.mat  sztPQg9ZZZThYFlcnGcBQ3G.l  sztPQg9ZZZThYFlcnGcBQ3G.mat
carsim2mpc_v1.1/slprj/_sfprj/carsim/: amsi_serial.mat
模型文件-建议先按照老王的来/: simfile.sim
(+58 files in other folders)
